create: connect normalize.scss

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,5 +4,8 @@
 //Подключение базовых настроек
 @import 'settings'
 
+// Подключение normalize.scss
+@import 'normalize'
+
 //Подкючение для блока header
 @import 'blocks/header'
