create: styles for header

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,11 +1,11 @@
+// Подключение normalize.scss
+@import 'normalize'
+
 //Подключение переменных
 @import 'variables'
 
 //Подключение базовых настроек
 @import 'settings'
 
-// Подключение normalize.scss
-@import 'normalize'
-
-//Подкючение для блока header
-@import 'blocks/header'
+//Подкючение для блока header.sass
+@import 'blocks/_header'
