--- a/css/style.css
+++ b/css/style.css
@@ -497,8 +497,10 @@ img {
     margin-left: auto;
   }
   .navbar-menu {
-    padding-top: 22px;
+    padding-top: 20px;
     padding-bottom: 22px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   .navbar-menu__link {
     font-size: 12px;
@@ -506,6 +508,9 @@ img {
   }
   .search__input {
     width: 340px;
+  }
+  .user__avatar {
+    margin-left: 26px;
   }
 }
 
@@ -550,7 +555,7 @@ img {
     max-width: 280px;
   }
   .navbar-top {
-    padding-top: 28px;
+    padding-top: 25px;
     padding-bottom: 28px;
   }
   .logo {
