--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,14 +13,20 @@
     &__search
       margin-left: auto
     &-menu
-      padding-top: 22px
+      //Заменила на space-around + top уменьшила с 22 до 20, для совпадения с макетом
+      padding-top: 20px
       padding-bottom: 22px
+      justify-content: space-around
       &__link
         font-size: 12px
         line-height: 15px
   .search
     &__input
       width: 340px
+  .user
+    &__avatar
+      // Добавлен margin слева, чтобы строка поиска совпала с макетом
+      margin-left: 26px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -49,7 +55,8 @@
     max-width: 280px
   .navbar
     &-top
-      padding-top: 28px
+      // Изменила top с 28 на 25 для совпадения с макетом
+      padding-top: 25px
       padding-bottom: 28px
   .logo
     width: 99px
