create: breadcrumb and hotel-info

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,11 @@
 //Подкючение для блока header.sass
 @import 'blocks/_header'
 
+//Подкючение для блока breadcrumb.sass
+@import 'blocks/_breadcrumb'
+
+//Подкючение для блока hotel.sass
+@import 'blocks/_hotel'
+
 //Подключение стилей для адаптива
 @import 'media'
