--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -27,7 +27,7 @@
     &__avatar
       // Добавлен margin слева, чтобы строка поиска совпала с макетом
       margin-left: 26px
-@media (max-width: 768px)
+@media (max-width: 767px)
   .container
     max-width: 576px
     width: 92%
@@ -50,6 +50,24 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .stars
+    flex-basis: auto
+  .hotel
+    &-name
+      flex-basis: 100%
+    &-wrapper
+      justify-content: space-between
+    &-info
+      &__text
+        width: 100%
+      &__name
+        margin-top: 10px
+      &__offer
+        order: -1
+        margin-left: 0
+        margin-top: 0
+      &__rating
+        display: none
 @media (max-width: 576px)
   .container
     max-width: 280px
