--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -27,6 +27,12 @@
     font-size: 12px
     line-height: 15px
     font-weight: 400
+  &-grid
+    display: flex
+  &-booking-map
+    display: flex
+    flex-direction: column
+    justify-content: space-between
   &__slider
     margin-left: 0
     margin-right: 30px
@@ -96,3 +102,76 @@
     font-weight: 700
     &-genl
       font-size: 10px
+.booking
+  font-family: 'Nunito', sans-serif
+  width: 350px
+  min-height: 210px
+  padding: 26px
+  border-radius: 8px
+  background-color: $dark
+  color: $light
+  &__info
+    display: flex
+    justify-content: space-between
+    margin-bottom: 9px
+  &__price
+    display: flex
+    flex-direction: column
+  &__start
+    font-weight: 400
+    font-size: 10px
+    line-height: 14px
+  &__price-tag
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
+  &__per-room
+    font-weight: 400
+    font-size: 12px
+    line-height: 10px
+  &__room
+    margin-top: 4px
+  &__text
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 8px
+    font-weight: 400
+    font-size: 12px
+    line-height: 16px
+  &__description
+    margin-left: 9px
+  &__call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 17px
+  &__call-text
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+  &__call-number
+    display: flex
+    align-items: center
+    justify-content: space-between
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+    color: inherit
+    text-decoration: none
+    text-transform: uppercase
+  &__call-description
+    margin-left: 9px
+  &__button
+    width: 100%
+    min-height: 45px
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+    border-radius: 4px
+    background-color: $primary
+    color: $light
+    border: none
+    cursor: pointer
+.map
+  border-radius: 8px
