--- a/css/style.css
+++ b/css/style.css
@@ -568,24 +568,9 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.hotel-booking-map {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-.hotel__slider {
-  margin-left: 0;
-  margin-right: 30px;
 }
 
 .hotel-slider {
@@ -593,6 +578,8 @@ img {
   height: 450px;
   position: relative;
   border-radius: 8px;
+  margin-left: 0;
+  margin-right: 30px;
 }
 
 .hotel-slider::after {
@@ -642,6 +629,16 @@ img {
      object-fit: cover;
 }
 
+.hotel-booking-map {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .stars {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
@@ -686,6 +683,7 @@ img {
   font-family: 'Nunito', sans-serif;
   width: 350px;
   min-height: 210px;
+  margin-bottom: 27px;
   padding: 26px;
   border-radius: 8px;
   background-color: #0A223D;
@@ -699,7 +697,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 9px;
+  margin-bottom: 10px;
 }
 
 .booking__price {
@@ -751,7 +749,7 @@ img {
 }
 
 .booking__description {
-  margin-left: 9px;
+  margin-left: 7px;
 }
 
 .booking__call-center {
@@ -809,7 +807,16 @@ img {
 }
 
 .map {
-  border-radius: 8px;
+  width: 350px;
+  height: 213px;
+}
+
+.map__location {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  border: none;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
@@ -847,6 +854,31 @@ img {
   }
   .user__avatar {
     margin-left: 26px;
+  }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel-slider {
+    margin-bottom: 30px;
+    margin-right: 0;
+    width: 100%;
+  }
+  .hotel-booking-map {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .booking {
+    width: 340px;
+    margin-right: 20px;
+    margin-bottom: 0;
+  }
+  .map {
+    width: 340px;
   }
 }
 
@@ -913,6 +945,23 @@ img {
   .hotel-info__rating {
     display: none;
   }
+  .hotel .swiper-wrapper {
+    height: 100%;
+  }
+  .hotel-booking-map {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel .booking {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
+  .hotel .map {
+    width: 100%;
+  }
 }
 
 @media (max-width: 576px) {
@@ -928,6 +977,20 @@ img {
   }
   .hotel {
     padding-top: 3px;
+  }
+  .hotel-info {
+    margin-bottom: 38px;
+  }
+  .hotel-slider {
+    height: 173px;
+  }
+  .hotel-booking-map {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .hotel .map {
+    height: 165px;
   }
 }
 /*# sourceMappingURL=style.css.map */
