--- a/css/style.css
+++ b/css/style.css
@@ -811,12 +811,8 @@ img {
   height: 213px;
 }
 
-.map__location {
-  width: 100%;
-  height: 100%;
+.map#map {
   border-radius: 10px;
-  border: none;
-  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
