--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -84,6 +84,10 @@
     .swiper
       &-wrapper
         height: 100%
+    &-slider
+      &__button
+        width: 27px
+        height: 27px
     &-booking-map
       flex-direction: column
     .booking
@@ -107,6 +111,13 @@
       margin-bottom: 38px
     &-slider
       height: 173px
+      &__button
+        width: 12px
+        height: 12px
+        &--next
+          right: 11px
+        &--prev
+          left: 11px
     &-booking-map
       justify-content: flex-start
     .map
