--- a/css/style.css
+++ b/css/style.css
@@ -811,8 +811,11 @@ img {
   height: 213px;
 }
 
-#map > ymaps {
+.map__location {
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
+  border: none;
   overflow: hidden;
 }
 
