--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -176,6 +176,9 @@
 .map
   width: 350px
   height: 213px
-#map > ymaps
-  border-radius: 10px
-  overflow: hidden
+  &__location
+    width: 100%
+    height: 100%
+    border-radius: 10px
+    border: none
+    overflow: hidden
