--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,8 @@
 //Подкючение для блока hotel.sass
 @import 'blocks/_hotel'
 
+//Подкючение для блока newsletter.sass
+@import 'blocks/_newsletter'
+
 //Подключение стилей для адаптива
 @import 'media'
