--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -25,6 +25,7 @@
   &-title
     display: flex
     flex-direction: column
+    max-width: 381px
     margin: 0
     color: $light
     font-weight: 300
@@ -60,8 +61,8 @@
     height: 100%
     border: none
     background-color: $primary
+    color: $light
     font-weight: 700
     font-size: 12px
     line-height: 15px
-    color: $light
     cursor: pointer
