create: added reviews section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,5 +19,8 @@
 //Подкючение для блока newsletter.sass
 @import 'blocks/_newsletter'
 
+//Подкючение для блока reviews.sass
+@import 'blocks/_reviews'
+
 //Подключение стилей для адаптива
 @import 'media'
