--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -42,6 +42,22 @@
     margin-bottom: 0
   .map
     width: 340px
+  .reviews
+    &__title
+      margin-bottom: 50px
+      font-size: 30px
+      line-height: 43px
+    &-slider
+      &__item
+        max-width: 580px
+        padding: 0 60px 30px
+      &__button
+        top: 42%
+        transform: translateY(-42%)
+        &--next
+          right: 0px
+        &--prev
+          left: 0px
 @media (max-width: 767px)
   .container,
   .newsletter-wrapper
@@ -118,6 +134,26 @@
         line-height: 38px
   .subscribe
     width: 100%
+  .reviews
+    &__title
+      font-size: 20px
+      line-height: 23px
+      margin-bottom: 43px
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &::after, &::before
+          display: none
+      &__button
+        top: 30px
+        &--next
+          right: 50%
+          margin-right: -90px
+          transform: translate(50%, 0)
+        &--prev
+          left: 50%
+          margin-left: -90px
+          transform: translate(-50%, 0)
 @media (max-width: 576px)
   .container
     max-width: 280px
