--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -14,7 +14,7 @@
       display: flex
       flex-direction: column
       align-items: center
-      width: 730px
+      max-width: 730px
       margin: 45px auto 0
       padding: 0 97px 30px
       background-color: #fff
@@ -39,8 +39,8 @@
         background-repeat: no-repeat
     &__button
       position: absolute
-      top: 35%
-      // transform: translateY(-38%)
+      top: 39%
+      transform: translateY(-39%)
       z-index: 99
       width: 30px
       height: 30px
