--- a/css/style.css
+++ b/css/style.css
@@ -822,10 +822,6 @@ img {
 .newsletter {
   position: relative;
   padding: 97px 0 86px 0;
-  background-image: url(../img/newsletter-bg.jpeg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .newsletter::before {
@@ -872,6 +868,7 @@ img {
 }
 
 .newsletter-title__strong {
+  display: block;
   font-weight: 600;
   font-size: 36px;
   line-height: 45px;
@@ -901,9 +898,9 @@ img {
 
 .subscribe__button {
   position: absolute;
-  min-width: 65px;
   right: 0;
   top: 0;
+  min-width: 65px;
   height: 100%;
   border: none;
   background-color: #ec1f46;
