--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,10 +1,6 @@
 .newsletter
   position: relative
   padding: 97px 0 86px 0
-  background-image: url(../img/newsletter-bg.jpeg)
-  background-repeat: no-repeat
-  background-position: center
-  background-size: cover
   &::before
     content: ''
     position: absolute
@@ -32,6 +28,7 @@
     font-size: 24px
     line-height: 30px
     &__strong
+      display: block
       font-weight: 600
       font-size: 36px
       line-height: 45px
@@ -55,9 +52,9 @@
     color: $text-subscribe
   &__button
     position: absolute
-    min-width: 65px
     right: 0
     top: 0
+    min-width: 65px
     height: 100%
     border: none
     background-color: $primary
