fix: reviews-slider and media

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -154,6 +154,8 @@
           left: 50%
           margin-left: -90px
           transform: translate(-50%, 0)
+      &__text
+        text-align: left
 @media (max-width: 576px)
   .container
     max-width: 280px
