--- a/css/style.css
+++ b/css/style.css
@@ -852,14 +852,6 @@ img {
 }
 
 .newsletter-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  max-width: 381px;
   margin: 0;
   color: #FFFFFF;
   font-weight: 300;
@@ -1277,6 +1269,9 @@ img {
     margin-left: -90px;
     -webkit-transform: translate(-50%, 0);
             transform: translate(-50%, 0);
+  }
+  .reviews-slider__text {
+    text-align: left;
   }
 }
 
