--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,5 +22,8 @@
 //Подкючение для блока reviews.sass
 @import 'blocks/_reviews'
 
+//Подкючение для блока activities.sass
+@import 'blocks/_activities'
+
 //Подключение стилей для адаптива
 @import 'media'
