--- a/css/style.css
+++ b/css/style.css
@@ -960,9 +960,9 @@ img {
 
 .reviews-slider__button {
   position: absolute;
-  top: 39%;
-  -webkit-transform: translateY(-39%);
-          transform: translateY(-39%);
+  top: 45%;
+  -webkit-transform: translateY(-45%);
+          transform: translateY(-45%);
   z-index: 99;
   width: 30px;
   height: 30px;
@@ -1044,9 +1044,101 @@ img {
   color: #333333;
 }
 
+.activities {
+  padding: 60px 0 90px 0;
+}
+
+.activities__title {
+  margin: 0;
+  margin-bottom: 57px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.activities-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 255px;
+  height: 255px;
+  border-radius: 6px;
+  padding: 24px 26px;
+  overflow: hidden;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
+  z-index: -1;
+}
+
+.card__image {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -2;
+}
+
+.card__title {
+  max-width: 240px;
+  margin-top: auto;
+  margin-bottom: 18px;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.card__button {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  color: #FFFFFF;
+  padding: 7px 22px;
+  border-radius: 4px;
+  border: none;
+  background-color: #ec1f46;
+  cursor: pointer;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .card {
+    width: 230px;
+    height: 230px;
   }
 }
 
@@ -1128,6 +1220,23 @@ img {
   }
   .reviews-slider__button--prev {
     left: 0px;
+  }
+  .activities {
+    padding-top: 47px;
+  }
+  .activities-wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .activities__card {
+    margin-bottom: 20px;
+  }
+  .card {
+    width: 340px;
+    height: 255px;
+  }
+  .card__title {
+    max-width: 200px;
   }
 }
 
@@ -1273,6 +1382,10 @@ img {
   .reviews-slider__text {
     text-align: left;
   }
+  .card {
+    width: 48%;
+    height: 255px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1331,6 +1444,21 @@ img {
   }
   .subscribe__input {
     padding-left: 20px;
+  }
+  .activities {
+    padding-top: 22px;
+  }
+  .activities__title {
+    margin-bottom: 38px;
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .activities__card {
+    margin-bottom: 22px;
+  }
+  .card {
+    width: 340px;
+    height: 255px;
   }
 }
 /*# sourceMappingURL=style.css.map */
