--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,5 +25,8 @@
 //Подкючение для блока activities.sass
 @import 'blocks/_activities'
 
+//Подкючение для блока packages.sass
+@import 'blocks/_packages'
+
 //Подключение стилей для адаптива
 @import 'media'
