creare: added footer section

--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -47,6 +47,7 @@
     font-size: 14px
     line-height: 18px
     color: $text-subscribe
+    outline: none
   &__button
     position: absolute
     right: 0
