--- a/sass/style.sass
+++ b/sass/style.sass
@@ -28,5 +28,8 @@
 //Подкючение для блока packages.sass
 @import 'blocks/_packages'
 
+//Подкючение для блока footer.sass
+@import 'blocks/_footer'
+
 //Подключение стилей для адаптива
 @import 'media'
