--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,10 @@ img {
   font-weight: 700;
 }
 
+.navbar-menu__link:hover {
+  color: #ec1f46;
+}
+
 .logo {
   width: 177px;
 }
@@ -442,6 +446,7 @@ img {
   line-height: 15px;
   font-weight: 400;
   color: #333333;
+  outline: none;
 }
 
 .search__button {
@@ -478,6 +483,10 @@ img {
   line-height: 18px;
   font-weight: 400;
   color: #333333;
+}
+
+.user__name:hover {
+  color: #ec1f46;
 }
 
 .breadcrumb-list {
@@ -886,6 +895,7 @@ img {
   font-size: 14px;
   line-height: 18px;
   color: #BDBDBD;
+  outline: none;
 }
 
 .subscribe__button {
@@ -1045,7 +1055,7 @@ img {
 }
 
 .activities {
-  padding: 60px 0 90px 0;
+  padding: 60px 0 95px 0;
 }
 
 .activities__title {
@@ -1319,6 +1329,255 @@ img {
   font-size: 14px;
   line-height: 158.6%;
   color: #FFFFFF;
+}
+
+.footer {
+  background-color: #0A223D;
+  color: #FFFFFF;
+  padding: 108px 0 46px 0;
+}
+
+.footer-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(min-content, 1fr))[4];
+      grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
+      grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  grid-gap: 20px;
+  grid-auto-rows: minmax(40px, -webkit-min-content);
+  grid-auto-rows: minmax(40px, min-content);
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  margin-bottom: 95px;
+}
+
+.footer__logo {
+  width: 155px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+.footer__category {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1 / 4;
+}
+
+.footer__social-network {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / 4;
+  grid-column: span 2;
+}
+
+.footer__social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-width: 83px;
+}
+
+.footer__contact-details {
+  grid-column: span 2;
+}
+
+.footer__contact-form {
+  grid-column: span 2;
+}
+
+.footer__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer__title {
+  margin: 0 0 16px 0;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+}
+
+.footer__title--inline {
+  margin: 0 43px 0 0;
+}
+
+.footer__title--mb-3 {
+  margin-bottom: 30px;
+}
+
+.footer__title-contact {
+  line-height: 45px;
+  margin-bottom: 10px;
+}
+
+.footer__legal {
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.footer__ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.footer__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  color: #BDBDBD;
+}
+
+.footer__icon-wrapper {
+  min-width: 40px;
+}
+
+.footer__link {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.footer__link:hover {
+  color: #ec1f46;
+}
+
+.footer__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  color: #BDBDBD;
+  margin-bottom: 20px;
+}
+
+.footer__input {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 4px;
+  padding: 0 23px;
+  height: 55px;
+  -ms-flex-preferred-size: 47%;
+      flex-basis: 47%;
+  margin-bottom: 15px;
+  outline: none;
+}
+
+.footer__input:hover {
+  color: #333333;
+}
+
+.footer__message {
+  height: 123px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  padding: 18px 23px;
+  margin-bottom: 23px;
+  border-radius: 4px;
+  border: none;
+  background-color: #FFFFFF;
+  resize: none;
+  outline: none;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.footer__message:hover {
+  color: #333333;
+}
+
+.footer__button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  border-radius: 4px;
+  border: none;
+  background-color: #ec1f46;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.footer__info {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #E0E0E0;
+}
+
+.img-facebook {
+  background-image: url("../img/facebook.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 21px;
+  height: 21px;
+}
+
+.img-facebook:hover {
+  background-image: url("../img/facebook_activ.svg");
+}
+
+.img-youtube {
+  background-image: url("../img/youtube.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 21px;
+  height: 21px;
+}
+
+.img-youtube:hover {
+  background-image: url("../img/youtube_activ.svg");
+}
+
+.img-instagram {
+  background-image: url("../img/instagram.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 21px;
+  height: 21px;
+}
+
+.img-instagram:hover {
+  background-image: url("../img/instagram_activ.svg");
 }
 
 @media (max-width: 1200px) {
