--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,6 +28,8 @@
       font-size: 14px
       line-height: 18px
       font-weight: 700
+      &:hover
+        color: $primary
 .logo
   width: 177px
 .search
@@ -47,6 +49,7 @@
     line-height: 15px
     font-weight: 400
     color: $text-color
+    outline: none
   &__button
     position: absolute
     top: 0
@@ -70,3 +73,5 @@
     line-height: 18px
     font-weight: 400
     color: $text-color
+    &:hover
+      color: $primary
