--- a/css/style.css
+++ b/css/style.css
@@ -2082,7 +2082,7 @@ img {
   .footer-wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    grid-row-gap: 25px;
+    grid-row-gap: 40px;
   }
   .footer__logo {
     -ms-grid-row: 1;
@@ -2102,8 +2102,7 @@ img {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    margin-left: 0px;
-    margin-bottom: 27px;
+    margin: 0px;
   }
   .footer__additional {
     -ms-grid-row: 4;
@@ -2124,6 +2123,8 @@ img {
     grid-row: 3;
     -ms-grid-column: 1;
     grid-column: 1;
+    -ms-grid-column-align: start;
+        justify-self: start;
   }
   .footer__contact-details {
     -ms-grid-row: 6;
@@ -2136,9 +2137,44 @@ img {
     grid-row: 7;
     -ms-grid-column: 1;
     grid-column: 1;
+    margin-top: 26px;
+  }
+  .footer__title {
+    line-height: 14px;
   }
   .footer__title--inline {
-    margin: 0 43px 21px 0px;
+    margin: 0 0 24px 0px;
+  }
+  .footer__title-contact {
+    line-height: 23px;
+    margin-bottom: 23px;
+  }
+  .footer__title--mb-3 {
+    margin-bottom: 18px;
+  }
+  .footer__icon-wrapper {
+    min-width: 29px;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    height: 52px;
+  }
+  .footer__message {
+    margin-bottom: 13px;
+  }
+  .footer__info {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin-bottom: 14px;
+  }
+  .footer__button {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 }
 /*# sourceMappingURL=style.css.map */
