--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -50,6 +50,8 @@
     font-weight: 400
     color: $text-color
     outline: none
+    &::placeholder
+      color: $text-color
   &__button
     position: absolute
     top: 0
@@ -73,5 +75,3 @@
     line-height: 18px
     font-weight: 400
     color: $text-color
-    &:hover
-      color: $primary
