--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,22 @@ img {
   outline: none;
 }
 
+.search__input::-webkit-input-placeholder {
+  color: #333333;
+}
+
+.search__input:-ms-input-placeholder {
+  color: #333333;
+}
+
+.search__input::-ms-input-placeholder {
+  color: #333333;
+}
+
+.search__input::placeholder {
+  color: #333333;
+}
+
 .search__button {
   position: absolute;
   top: 0;
@@ -483,10 +499,6 @@ img {
   line-height: 18px;
   font-weight: 400;
   color: #333333;
-}
-
-.user__name:hover {
-  color: #ec1f46;
 }
 
 .breadcrumb-list {
@@ -894,8 +906,24 @@ img {
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
-  color: #BDBDBD;
+  color: #333333;
   outline: none;
+}
+
+.subscribe__input::-webkit-input-placeholder {
+  color: #BDBDBD;
+}
+
+.subscribe__input:-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.subscribe__input::-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.subscribe__input::placeholder {
+  color: #BDBDBD;
 }
 
 .subscribe__button {
@@ -1486,7 +1514,7 @@ img {
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
-  color: #BDBDBD;
+  color: #333333;
   background-color: #FFFFFF;
   border: none;
   border-radius: 4px;
@@ -1498,8 +1526,20 @@ img {
   outline: none;
 }
 
-.footer__input:hover {
-  color: #333333;
+.footer__input::-webkit-input-placeholder {
+  color: #BDBDBD;
+}
+
+.footer__input:-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.footer__input::-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.footer__input::placeholder {
+  color: #BDBDBD;
 }
 
 .footer__message {
@@ -1516,11 +1556,23 @@ img {
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
+  color: #333333;
+}
+
+.footer__message::-webkit-input-placeholder {
   color: #BDBDBD;
 }
 
-.footer__message:hover {
-  color: #333333;
+.footer__message:-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.footer__message::-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.footer__message::placeholder {
+  color: #BDBDBD;
 }
 
 .footer__button {
@@ -1707,25 +1759,18 @@ img {
     padding-top: 73px;
   }
   .footer-wrapper {
-    -ms-grid-columns: (1fr)[6];
-        grid-template-columns: repeat(6, 1fr);
+    -ms-grid-columns: (1fr)[8];
+        grid-template-columns: repeat(8, 1fr);
     grid-row-gap: 50px;
   }
   .footer__input {
-    -ms-flex-preferred-size: 49%;
-        flex-basis: 49%;
+    height: 53px;
   }
   .footer__logo {
     width: 95px;
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1 / 2;
-    grid-column: span 1;
-  }
-  .footer__category {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2 / 3;
     grid-column: span 1;
   }
   .footer__social-network {
@@ -1739,26 +1784,38 @@ img {
     margin-left: 15px;
     margin-top: 15px;
   }
+  .footer__category {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    grid-column: span 1;
+  }
   .footer__additional {
-    grid-column: span 3;
+    grid-column: span 4;
     margin-left: 30px;
   }
   .footer__legal {
-    grid-column: span 2;
-  }
-  .footer__title--mb-3 {
-    margin-bottom: 22px;
-    line-height: 45px;
+    grid-column: span 3;
+    margin-left: 14px;
+    -ms-grid-column-align: start;
+        justify-self: start;
   }
   .footer__contact-details {
     -ms-grid-row: 3;
     grid-row: 3;
-    grid-column: span 5;
+    grid-column: span 6;
   }
   .footer__contact-form {
     -ms-grid-row: 4;
     grid-row: 4;
-    grid-column: span 5;
+    grid-column: span 6;
+  }
+  .footer__icon-wrapper {
+    min-width: 47px;
+    padding: 6px;
+  }
+  .footer__text {
+    margin-bottom: 21px;
   }
   .footer__link:hover {
     color: inherit;
@@ -1949,6 +2006,51 @@ img {
     width: 48%;
     height: 255px;
   }
+  .footer-wrapper {
+    -ms-grid-columns: (1fr)[5];
+        grid-template-columns: repeat(5, 1fr);
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 1;
+  }
+  .footer__social-network {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 4;
+  }
+  .footer__category {
+    -ms-grid-row: 3;
+    grid-row: 3 / 3;
+    grid-column: span 1;
+  }
+  .footer__additional {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    grid-column: span 2;
+    margin-left: 0px;
+  }
+  .footer__legal {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    grid-column: span 2;
+    margin-left: 30px;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    grid-column: span 5;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    grid-column: span 5;
+  }
 }
 
 @media (max-width: 576px) {
@@ -2109,7 +2211,6 @@ img {
     grid-row: 4;
     -ms-grid-column: 1;
     grid-column: 1;
-    margin: 0;
   }
   .footer__category {
     -ms-grid-row: 5;
@@ -2123,8 +2224,7 @@ img {
     grid-row: 3;
     -ms-grid-column: 1;
     grid-column: 1;
-    -ms-grid-column-align: start;
-        justify-self: start;
+    margin-left: 0;
   }
   .footer__contact-details {
     -ms-grid-row: 6;
@@ -2137,7 +2237,7 @@ img {
     grid-row: 7;
     -ms-grid-column: 1;
     grid-column: 1;
-    margin-top: 26px;
+    margin-top: 22px;
   }
   .footer__title {
     line-height: 14px;
@@ -2153,7 +2253,8 @@ img {
     margin-bottom: 18px;
   }
   .footer__icon-wrapper {
-    min-width: 29px;
+    min-width: 32px;
+    padding: 2px;
   }
   .footer__input {
     -ms-flex-preferred-size: 100%;
@@ -2175,6 +2276,9 @@ img {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
+  }
+  .footer__text {
+    line-height: 158%;
   }
 }
 /*# sourceMappingURL=style.css.map */
