--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -81,7 +81,7 @@
     font-weight: 400
     font-size: 12px
     line-height: 15px
-    color: $text-subscribe
+    color: $text-color
     background-color: $light
     border: none
     border-radius: 4px
@@ -90,8 +90,8 @@
     flex-basis: 47%
     margin-bottom: 15px
     outline: none
-    &:hover
-      color: $text-color
+    &::placeholder
+      color: $text-subscribe
   &__message
     height: 123px
     flex-basis: 100%
@@ -105,9 +105,9 @@
     font-weight: 400
     font-size: 12px
     line-height: 15px
-    color: $text-subscribe
-    &:hover
-      color: $text-color
+    color: $text-color
+    &::placeholder
+      color: $text-subscribe
   &__button
     min-width: 160px
     min-height: 50px
