--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -46,8 +46,10 @@
     font-weight: 300
     font-size: 14px
     line-height: 18px
-    color: $text-subscribe
+    color: $text-color
     outline: none
+    &::placeholder
+      color: $text-subscribe
   &__button
     position: absolute
     right: 0
