--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -155,8 +155,8 @@
     padding-top: 78px
   // шапка
   .navbar
-    &__mobile
-      &--fixed
+    &--mobile
+      &-fixed
         position: fixed
         left: 0
         top: 0
