--- a/css/style.css
+++ b/css/style.css
@@ -1844,7 +1844,7 @@ img {
   body {
     padding-top: 78px;
   }
-  .navbar__mobile--fixed {
+  .navbar--mobile-fixed {
     position: fixed;
     left: 0;
     top: 0;
